--- a/src/Club/BookingBundle/Resources/views/Booking/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/index.html.twig
@@ -4,21 +4,13 @@
   <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/booking.css') }}" />
 {% endblock %}
 
-{% block javascripts %}
-  <script type="text/javascript" src="{{ asset('bundles/clublayout/js/booking.js') }}"></script>
-{% endblock %}
-
 {% block body %}
 <h2>Booking - {{ date|date('Y-m-d') }}</h2>
 
 {% for item in nav %}
-<div class="col33 t-right"><a href="{{ path('club_booking_booking_index', {'date':item|date('Y-m-d')}) }}">{{ item|date('l') }} &raquo;</a></div>
+  <div class="col33 t-right"><a href="{{ path('club_booking_booking_index', {'date':item|date('Y-m-d')}) }}">{{ item|date('l') }} &raquo;</a></div>
 {% endfor %}
 
-<div id="booking">
-  <div id="times"></div>
-  <div id="fields"></div>
-  <div id="intervals"></div>
-</div>
+{% include "ClubBookingBundle:Booking:table.html.twig" %}
 
 {% endblock %}
