Added support for location in booking table.

--- a/src/Club/BookingBundle/Resources/views/Booking/table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/table.html.twig
@@ -104,7 +104,7 @@ function initTable(location, date)
 
 $(document).ready(function() {
   date = new Date("{{ date|date('c')}}");
-  initTable(2, date);
+  initTable({{ location.id }}, date);
 });
 </script>
 
