--- a/src/Club/UserBundle/Resources/views/Auth/login.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/login.html.twig
@@ -14,7 +14,7 @@
                 <p class="msg info">Enter your username and password.</p>
 
                 <!-- Form -->
-                <form method="POST" action="{{ path('_security_check') }}">
+                <form method="POST" action="{{ path('login_check') }}">
                 <table class="nom nostyle">
                         <tr>
                                 <td style="width:75px;"><label for="login-user"><strong>Username:</strong></label></td>
