--- a/src/Club/ShopBundle/Resources/views/base.html.twig
+++ b/src/Club/ShopBundle/Resources/views/base.html.twig
@@ -1,3 +1,3 @@
 {% extends "ClubLayoutBundle:Default:base.html.twig" %}
 
-{% block header %}<h1>{% trans %}Shop{% endtrans %} <em>({{ app.session.get('location') }})</em></h1>{% endblock %}
+{% block header %}<h1>{% trans %}Shop{% endtrans %}</h1>{% endblock %}
