--- a/src/Club/TeamBundle/Resources/views/Team/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/Team/index.html.twig
@@ -26,6 +26,7 @@
       <td>{{ schedule.firstDate|date('H:i') }} - {{ schedule.endDate|date('H:i') }}</td>
       <td>{{ schedule.team.teamName }} ( {{ schedule.users|length }}/{{ schedule.maxAttend }} )</td>
       <td>{{ schedule.location.locationName }}</td>
+      {% if is_granted('IS_AUTHENTICATED_FULLY') %}
       <td>
         {% if user.attend(schedule) %}
           {% include "ClubLayoutBundle:Default:unattend_link.html.twig" with {'url':path('club_team_team_unattend', { 'id':schedule.id })} %}
@@ -33,6 +34,7 @@
           {% include "ClubLayoutBundle:Default:attend_link.html.twig" with {'url':path('club_team_team_attend', { 'id':schedule.id })} %}
         {% endif %}
       </td>
+      {% endif %}
     </tr>
   {% else %}
   <tr>
