--- a/src/Club/LayoutBundle/Resources/views/Default/interval_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/interval_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-delete.gif') }}" class="ico" alt="{% trans %}Interval{% endtrans %}" title="{% trans %}Interval{% endtrans %}" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/attributes-display-icon.png') }}" class="ico" alt="{% trans %}Interval{% endtrans %}" title="{% trans %}Interval{% endtrans %}" /></a>
