--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -13,12 +13,11 @@
         <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/style.css') }}" /> <!-- GRAPHIC THEME -->
         <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" /> <!-- WRITE YOUR CSS CODE HERE -->
         <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/slimbox2.css') }}" /> <!-- LIGHTBOX -->
-        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-1.7.1.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery.slimbox2.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery.switcher.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/toggle.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/ui.core.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/ui.tabs.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-ui-1.8.17.custom.min.js') }}"></script>
         <script type="text/javascript">
         $(document).ready(function(){
                 $(".tabs > ul").tabs();
