Fixed huge problem with api.

--- a/src/Club/BookingBundle/Resources/views/Booking/book.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/book.html.twig
@@ -1,3 +1,40 @@
+{% block javascripts %}
+<script type="text/javascript">
+  $(function() {
+    $( "#booking_query" ).autocomplete({
+      source: function( request, response ) {
+        $.ajax({
+          url: "/clubmaster/web/index_dev.php/api/users/search/grace",
+          success: function( data ) {
+            response( $.map( data.geonames, function( item ) {
+              return {
+                label: item.name + (item.adminName1 ? ", " + item.adminName1 : "") + ", " + item.countryName,
+                value: item.name
+              }
+            }));
+          },
+          headers: {
+            "API_KEY":"THIS_IS_A_DEMO_KEY"
+          }
+        });
+      },
+      minLength: 2,
+      select: function( event, ui ) {
+        log( ui.item ?
+          "Selected: " + ui.item.label :
+          "Nothing selected, input was " + this.value);
+      },
+      open: function() {
+        $( this ).removeClass( "ui-corner-all" ).addClass( "ui-corner-top" );
+      },
+      close: function() {
+        $( this ).removeClass( "ui-corner-top" ).addClass( "ui-corner-all" );
+      }
+    });
+  });
+</script>
+{% endblock %}
+
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block body %}
