Improved design slightly on booking page.

--- a/src/Club/BookingBundle/Resources/views/Booking/table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/table.html.twig
@@ -15,12 +15,14 @@
 {% block body %}
 
 <div class="fix"></div>
+<p>&#160;</p>
 
 <div id="booking">
   <div id="times"></div>
   <div id="fields"></div>
   <div id="intervals"></div>
 </div>
+<div id="preloader"><img src="{{ asset('bundles/clublayout/images/ajax-loader.gif') }}"></div>
 
 {% endblock %}
 
