--- a/src/Club/BookingBundle/Resources/views/Booking/table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/table.html.twig
@@ -18,9 +18,9 @@
 <p>&#160;</p>
 
 <div id="booking">
-  <div id="times"></div>
-  <div id="fields"></div>
-  <div id="intervals"></div>
+  <div id="times"></div> <!-- this is for time periods -->
+  <div id="fields"></div> <!-- this is for field names -->
+  <div id="intervals"></div> <!-- this is for intervals -->
 </div>
 <div id="preloader"><img src="{{ asset('bundles/clublayout/images/ajax-loader.gif') }}"></div>
 
