--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -73,6 +73,7 @@
 
                         </div> <!-- /padding -->
 
+                        {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
                         <form method="post" action="{{ path('login_check') }}">
                           <p>Username:<br />
                           <input type="text" name="_username"></p>
@@ -80,6 +81,7 @@
                           <input type="password" name="_password" /></p>
                           <p><input type="submit" value="Login"></p>
                         </form>
+                        {% endif %}
                         {% render "ClubMenuBundle:Default:leftMenu" %}
 
                 </div> <!-- /aside -->
