--- a/src/Club/BookingBundle/Resources/views/Overview/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/index.html.twig
@@ -12,9 +12,9 @@
 <h2>Booking - {{ date|date('Y-m-d') }}</h2>
 
 {% for item in nav %}
-  <div class="col33 t-right"><a href="{{ path('club_booking_booking_index', {'date':item|date('Y-m-d')}) }}">{{ item|date('l') }} &raquo;</a></div>
+  <div class="col33 t-right"><a href="{{ path('club_booking_overview_index', {'date':item|date('Y-m-d')}) }}">{{ item|date('l') }} &raquo;</a></div>
 {% endfor %}
 
-{% include "ClubBookingBundle:Booking:table.html.twig" %}
+{% include "ClubBookingBundle:Overview:table.html.twig" %}
 
 {% endblock %}
