Added better overview of booking.

--- a/src/Club/BookingBundle/Resources/views/Overview/view.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/view.html.twig
@@ -1,3 +1,5 @@
+{% extends "ClubBookingBundle::base.html.twig" %}
+
 {% block javascripts %}
 <script type="text/javascript">
   $(function() {
@@ -35,8 +37,6 @@
 </script>
 {% endblock %}
 
-{% extends "ClubBookingBundle::base.html.twig" %}
-
 {% block body %}
 <h2>Booking</h2>
 
@@ -54,6 +54,15 @@
     {% endif %}
   </div>
 </fieldset>
+
+{% if booking is defined and (is_granted('ROLE_BOOKING_ADMIN') or booking.user == app.user) %}
+
+<fieldset>
+  <legend>Delete</legend>
+  <p><a href="{{ path('club_booking_booking_cancel', {'id':booking.id}) }}">Cancel</a></p>
+</fieldset>
+
+{% elseif (is_granted('IS_AUTHENTICATED_FULLY') and booking is not defined) %}
 
 <fieldset>
   <form method="post" action="{{ path('club_booking_booking_review', {'interval_id':interval.id, 'date':date|date('Y-m-d')}) }}">
@@ -76,5 +85,6 @@
 
   </form>
 </fieldset>
+{% endif %}
 
 {% endblock %}
