--- a/src/Club/LayoutBundle/Resources/public/css/booking.css
+++ b/src/Club/LayoutBundle/Resources/public/css/booking.css
@@ -47,7 +47,7 @@ div#booking a
 div#booking a:hover
 {
   text-decoration: none;
-  color: #747474;
+  color: #ffffff;
 }
 
 div#booking div.interval
@@ -73,6 +73,11 @@ div#booking div.past
 div#booking div.past:hover
 {
   background-color: #e3e3e3;
+}
+
+div#booking div.booking:hover
+{
+  background-color: #bd6d6d;
 }
 
 div#booking div.booking
