Changed a lot of icons, removed show log view.

--- a/src/Club/LayoutBundle/Resources/views/Default/boolean_inverse.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/boolean_inverse.html.twig
@@ -1,5 +1,5 @@
 {% if flag == 1 %}
-<img src="{{ asset('bundles/clublayout/images/ico-delete.gif') }}" title="{% trans %}Disabled{% endtrans %}" alt="{% trans %}Disabled{% endtrans %}" />
+<img src="{{ asset('bundles/clublayout/images/icons/16x16/cancel.png') }}" title="{% trans %}Disabled{% endtrans %}" alt="{% trans %}Disabled{% endtrans %}" />
 {% else %}
-<img src="{{ asset('bundles/clublayout/images/ico-done.gif') }}" title="{% trans %}Enabled{% endtrans %}" alt="{% trans %}Enabled{% endtrans %}" />
+<img src="{{ asset('bundles/clublayout/images/icons/16x16/tick.png') }}" title="{% trans %}Enabled{% endtrans %}" alt="{% trans %}Enabled{% endtrans %}" />
 {% endif %}
