--- a/src/Club/LayoutBundle/Resources/views/Default/enable_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/enable_link.html.twig
@@ -1,1 +1,1 @@
-<a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');" href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-done.gif') }}" class="ico" alt="{% trans %}Enable{% endtrans %}" title="{% trans %}Enable{% endtrans %}" /></a>
+<a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');" href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16x16/tick.png') }}" class="ico" alt="{% trans %}Enable{% endtrans %}" title="{% trans %}Enable{% endtrans %}" /></a>
