--- a/src/Club/LayoutBundle/Resources/views/Default/run_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/run_link.html.twig
@@ -1,1 +1,1 @@
-<a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');" href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-settings.gif') }}" class="ico" alt="{% trans %}Run{% endtrans %}" title="{% trans %}Run{% endtrans %}" /></a>
+<a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');" href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16x16/control_play.png') }}" class="ico" alt="{% trans %}Run{% endtrans %}" title="{% trans %}Run{% endtrans %}" /></a>
