--- a/src/Club/LayoutBundle/Resources/views/Default/repetition_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/repetition_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-list.gif') }}" class="ico" alt="Repetition" title="Repetition" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16x16/calendar.png') }}" class="ico" alt="Repetition" title="Repetition" /></a>
