--- a/src/Club/LayoutBundle/Resources/views/Default/show_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/show_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16x16/zoom.png') }}" class="ico" alt="{% trans %}Show{% endtrans %}" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16x16/zoom.png') }}" class="ico" title="{% trans %}Show{% endtrans %}" alt="{% trans %}Show{% endtrans %}" /></a>
