Removed icon files.

--- a/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
@@ -37,7 +37,7 @@
         <tr>
           <th>&#160;</th>
           <td>
-            <p>{% trans %}Nothing.{% endtrans %} <a href="{{ path('club_event_adminevent_new', {'year':current|date('Y'), 'month':current|date('n')}) }}" class="ico-list">{% trans %}Create{% endtrans %}</a></p>
+            <p>{% trans %}Nothing.{% endtrans %} <a href="{{ path('club_event_adminevent_new', {'year':current|date('Y'), 'month':current|date('n')}) }}" class="ico">{% trans %}Create{% endtrans %}</a></p>
           </td>
         </tr>
 
